src/test/deca/context/valid/operation-binaire-and.deca
// Description:
//    Test and op
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    true && false;
}