src/test/deca/context/invalid/operation-binaire-and-wrong.deca
// Description:
//    Test 3.33 fail avec and
//
// Resultats:
//    Ligne 11: And ne s'utilise qu'avec des booléens.
//
// Historique:
//    cree le 06/01/2023

{
    true && 1;
}